--- a/src/components/timeline/timeline.css
+++ b/src/components/timeline/timeline.css
@@ -13,9 +13,8 @@
 
 .timeline-item {
   margin-left: 1.5rem;
-  margin-bottom: 2.5rem;
+  margin-bottom: 1.5rem;
   text-align: left;
-  color: #57584e;
 }
 
 .timeline-item:hover {
@@ -24,14 +23,15 @@
 
 .timeline-item:hover .timeline-content {
   text-decoration: underline;
+  opacity: 1;
 }
 
 .timeline-dot > div {
-  width: 0.75rem;
-  height: 0.75rem;
+  width: 0.6rem;
+  height: 0.6rem;
   position: absolute;
   margin-top: 0.375rem;
-  left: -0.45rem;
+  left: -0.375rem;
   border-radius: 9999px;
   border: 1px solid white;
   background-color: var(--gray);
@@ -39,7 +39,7 @@
 
 .timeline-content {
   font-weight: 400;
-  font-size: 1rem;
+  font-size: 0.875rem;
   line-height: 1.5rem;
   margin-bottom: 1rem;
   overflow: hidden;
@@ -47,6 +47,7 @@
   -webkit-box-orient: vertical;
   text-overflow: ellipsis;
   display: -webkit-box;
+  opacity: 0.8;
 }
 
 .timeline-time {
