--- a/src/components/news-list/news-list.css
+++ b/src/components/news-list/news-list.css
@@ -13,9 +13,28 @@
 
 .featured-news .title {
   position: absolute;
-  bottom: 8px;
-  left: 16px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 16px 20px;
   color: #fff;
+  text-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
+}
+
+.featured-news .title:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 1px;
+  right: 0;
+  height: 80%;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 50%,
+    rgba(0, 0, 0, 0.7) 100%
+  );
 }
 
 .news-list li {
