--- a/src/components/timeline/timeline.css
+++ b/src/components/timeline/timeline.css
@@ -1,7 +1,7 @@
 .timeline {
   margin-left: auto;
   margin-right: auto;
-  border-left: 1px solid var(--gray);
+  border-left: 1px solid #ccced0;
 }
 
 .timeline > ol {
@@ -34,7 +34,7 @@
   left: -0.375rem;
   border-radius: 9999px;
   border: 1px solid white;
-  background-color: var(--gray);
+  background-color: #ccced0;
 }
 
 .timeline-content {
@@ -54,5 +54,5 @@
   line-height: 1;
   font-size: 0.875rem;
   margin-bottom: 0.25rem;
-  color: var(--muted-text);
+  color: #a4a59a;
 }
